--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^8.1.0",
+    "@commitlint/config-conventional": "^8.1.0",
     "eslint": "^5.3.0",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.17.2",
+    "husky": "^3.0.2",
+    "lint-staged": "^9.2.1",
     "nodemon": "^1.19.1"
   }
 }
