--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
+# dependencies
 node_modules
+
+# exclude environment variables
+config/.env*
+
+# include example environment variables
+!config/.env*.example
