--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
+    "dev": "env-cmd -f config/.env.dev nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ."
   },
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/hagopj13/task-manager#readme",
   "dependencies": {
+    "env-cmd": "^9.0.3",
     "express": "^4.17.1",
     "mongodb": "^3.3.0-beta2",
     "mongoose": "^5.6.8"
