feat(user): sign up user

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,13 @@
 {
     "extends": "airbnb-base",
+    "plugins": ["promise"],
     "env": {
         "node": true
     },
     "rules": {
         "no-console": "off",
         "semi": "off",
+        "func-names": "off",
         "linebreak-style": 0,
         "global-require": 0,
         "eslint linebreak-style": [0, "error", "windows"]
