--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   },
   "homepage": "https://github.com/hagopj13/task-manager#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "env-cmd": "^9.0.3",
     "express": "^4.17.1",
     "mongodb": "^3.3.0-beta2",
-    "mongoose": "^5.6.8"
+    "mongoose": "^5.6.8",
+    "validator": "^11.1.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.1.0",
@@ -32,6 +34,7 @@
     "eslint": "^5.3.0",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-promise": "^4.2.1",
     "husky": "^3.0.2",
     "lint-staged": "^9.2.1",
     "nodemon": "^1.19.1"
