--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/hagopj13/task-manager#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "boom": "^7.3.0",
     "env-cmd": "^9.0.3",
     "express": "^4.17.1",
     "mongodb": "^3.3.0-beta2",
