style: eslint fixes

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,9 +5,8 @@
         "node": true
     },
     "rules": {
-        "no-console": "off",
-        "semi": "off",
-        "func-names": "off",
+        "no-console": 0,
+        "semi": 0,
         "linebreak-style": 0,
         "global-require": 0,
         "eslint linebreak-style": [0, "error", "windows"]
