--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 node_modules
 
 # exclude environment variables
-config/.env*
+.env*
 
 # include example environment variables
-!config/.env*.example
+!.env*.example
