--- a/package.json
+++ b/package.json
@@ -4,26 +4,27 @@
   "description": "Just a practice backend server project to play around with some cool Node.js features.",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "env-cmd -f config/.env.dev nodemon src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "cross-env NODE_ENV=production node src/index.js",
+    "dev": "cross-env NODE_ENV=development nodemon src/index.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hagopj13/task-manager.git"
+    "url": "git+https://github.com/hagopj13/task-manager-nodejs.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/hagopj13/task-manager/issues"
+    "url": "https://github.com/hagopj13/task-manager-nodejs/issues"
   },
-  "homepage": "https://github.com/hagopj13/task-manager#readme",
+  "homepage": "https://github.com/hagopj13/task-manager-nodejs#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "boom": "^7.3.0",
+    "cross-env": "^5.2.0",
+    "dotenv-safe": "^6.1.0",
     "env-cmd": "^9.0.3",
     "express": "^4.17.1",
     "mongodb": "^3.3.0-beta2",
