--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "boom": "^7.3.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "cross-env": "^5.2.0",
     "dotenv-safe": "^6.1.0",
     "env-cmd": "^9.0.3",
     "express": "^4.17.1",
+    "helmet": "^3.20.0",
+    "method-override": "^3.0.0",
     "mongodb": "^3.3.0-beta2",
     "mongoose": "^5.6.8",
     "validator": "^11.1.0"
