style: add promise rules to eslint

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,16 @@
         "node": true
     },
     "rules": {
-
+      "no-console": "error",
+      "promise/always-return": "error",
+      "promise/no-return-wrap": "error",
+      "promise/param-names": "error",
+      "promise/catch-or-return": "error",
+      "promise/no-native": "off",
+      "promise/no-nesting": "error",
+      "promise/no-promise-in-callback": "error",
+      "promise/no-callback-in-promise": "off",
+      "promise/no-return-in-finally": "error",
+      "prefer-arrow-callback": "error"
     }
 }
