--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-    "extends": "airbnb-base",
+    "extends": ["airbnb-base", "plugin:prettier/recommended"],
     "plugins": ["promise"],
     "env": {
         "node": true
