--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "cross-env NODE_ENV=production node src/index.js",
     "dev": "cross-env NODE_ENV=development nodemon src/index.js",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --check src/**/*.js",
+    "format:fix": "prettier --write src/**/*.js"
   },
   "repository": {
     "type": "git",
@@ -33,6 +35,7 @@
     "method-override": "^3.0.0",
     "mongodb": "^3.3.0-beta2",
     "mongoose": "^5.6.8",
+    "prettier": "^1.18.2",
     "validator": "^11.1.0"
   },
   "devDependencies": {
@@ -40,7 +43,9 @@
     "@commitlint/config-conventional": "^8.1.0",
     "eslint": "^5.3.0",
     "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "husky": "^3.0.2",
     "lint-staged": "^9.2.1",
