--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,7 @@
   "trailingComma": "es5",
   "tabWidth": 2,
   "semi": true,
-  "singleQuote": true
+  "singleQuote": true,
+  "printWidth": 100,
+  "endOfLine": "lf"
 }
