--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "env-cmd": "^9.0.3",
     "express": "^4.17.1",
     "helmet": "^3.20.0",
+    "lodash": "^4.17.15",
     "method-override": "^3.0.0",
     "mongodb": "^3.3.0-beta2",
     "mongoose": "^5.6.8",
