--- a/.eslintrc
+++ b/.eslintrc
@@ -1,20 +1,10 @@
 {
-  "extends": ["airbnb-base", "plugin:prettier/recommended"],
-  "plugins": ["promise"],
+  "extends": ["airbnb-base", "plugin:prettier/recommended", "plugin:promise/recommended"],
   "env": {
     "node": true
   },
   "rules": {
     "no-console": "error",
-    "promise/always-return": "error",
-    "promise/no-return-wrap": "error",
-    "promise/param-names": "error",
-    "promise/catch-or-return": "error",
-    "promise/no-native": "off",
-    "promise/no-nesting": "error",
-    "promise/no-promise-in-callback": "error",
-    "promise/no-callback-in-promise": "off",
-    "promise/no-return-in-finally": "error",
-    "prefer-arrow-callback": "error"
+    "promise/no-callback-in-promise": "off"
   }
 }
