--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
   "extends": ["airbnb-base", "plugin:prettier/recommended", "plugin:promise/recommended"],
   "env": {
-    "node": true
+    "node": true,
+    "mocha": true
   },
   "rules": {
     "no-console": "error",
