test(auth): write first test

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production pm2 start ecosystem.config.js --no-daemon",
     "dev": "cross-env NODE_ENV=development nodemon src/index.js",
-    "test": "cross-env NODE_ENV=test mocha src/**/*.test.js --watch --recursive",
+    "test": "cross-env NODE_ENV=test mocha src/**/*.test.js --exit",
+    "test:watch": "cross-env NODE_ENV=test mocha src/**/*.test.js --watch --recursive",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --check src/**/*.js",
@@ -58,6 +59,7 @@
     "husky": "^3.0.2",
     "lint-staged": "^9.2.1",
     "mocha": "^6.2.0",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "supertest": "^4.0.2"
   }
 }
