test(user): add unit tests

--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production pm2 start ecosystem.config.js --no-daemon",
     "dev": "cross-env NODE_ENV=development nodemon src/index.js",
-    "test": "cross-env NODE_ENV=test mocha src/**/*.test.js --exit",
-    "test:watch": "cross-env NODE_ENV=test mocha src/**/*.test.js --watch",
-    "coverage": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha --exit src/**/*.test.js",
+    "test": "cross-env NODE_ENV=test mocha src/tests --recursive --exit",
+    "test:unit": "cross-env NODE_ENV=test mocha src/tests/unit --recursive --watch",
+    "test:integration": "cross-env NODE_ENV=test mocha src/tests/integration --recursive --watch",
+    "test:watch": "cross-env NODE_ENV=test mocha src/tests --recursive --watch",
+    "coverage": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha src/tests --recursive --exit ",
     "coverage:show": "opn coverage/lcov-report/index.html",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
