test: add unit tests for errorConverter

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "lodash": "^4.17.15",
     "method-override": "^3.0.0",
     "mongodb": "^3.3.0-beta2",
-    "mongoose": "^5.6.8",
+    "mongoose": "^5.6.9",
     "morgan": "^1.9.1",
     "pm2": "^3.5.1",
     "prettier": "^1.18.2",
@@ -54,18 +54,20 @@
     "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^8.1.0",
     "chai": "^4.2.0",
-    "eslint": "^5.3.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-chai-friendly": "^0.4.1",
-    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "husky": "^3.0.2",
+    "husky": "^3.0.3",
     "lint-staged": "^9.2.1",
     "mocha": "^6.2.0",
+    "node-mocks-http": "^1.7.6",
     "nodemon": "^1.19.1",
     "nyc": "^14.1.1",
+    "sinon": "^7.4.1",
     "supertest": "^4.0.2"
   }
 }
