--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "node-mocks-http": "^1.7.6",
     "nodemon": "^1.19.1",
     "nyc": "^14.1.1",
+    "rewire": "^4.0.1",
     "sinon": "^7.4.1",
     "supertest": "^4.0.2"
   }
