chore: change coverage script

--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "test:unit": "cross-env NODE_ENV=test mocha src/tests/unit --recursive --watch",
     "test:integration": "cross-env NODE_ENV=test mocha src/tests/integration --recursive --watch",
     "test:watch": "cross-env NODE_ENV=test mocha src/tests --recursive --watch",
-    "coverage": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha src/tests --recursive --exit ",
-    "coverage:show": "opn coverage/lcov-report/index.html",
+    "test:coverage": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha src/tests --recursive --exit ",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --check src/**/*.js",
