chore: integrate with codacy
closes #19

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 PORT=3000
 MONDODB_URL=mongodb://127.0.0.1:27017/task-manager-api-2
 MONDODB_TEST_URL=mongodb://127.0.0.1:27017/task-manager-api-2-test
+CODACY_PROJECT_TOKEN=<insert token here>
