--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:integration": "cross-env NODE_ENV=test mocha src/tests/integration --recursive --watch",
     "test:watch": "cross-env NODE_ENV=test mocha src/tests --recursive --watch",
     "test:coverage": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha src/tests --recursive --exit ",
+    "report": "cross-env NODE_ENV=test nyc --reporter=lcovonly mocha src/tests --recursive --exit && cat ./coverage/lcov.info | env-cmd codacy-coverage && rm -rf ./coverage",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --check src/**/*.js",
@@ -36,7 +37,6 @@
     "cors": "^2.8.5",
     "cross-env": "^5.2.0",
     "dotenv-safe": "^6.1.0",
-    "env-cmd": "^9.0.3",
     "express": "^4.17.1",
     "helmet": "^3.20.0",
     "lodash": "^4.17.15",
@@ -53,6 +53,8 @@
     "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^8.1.0",
     "chai": "^4.2.0",
+    "codacy-coverage": "^3.4.0",
+    "env-cmd": "^9.0.3",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-config-prettier": "^6.0.0",
