--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "dotenv-safe": "^6.1.0",
     "express": "^4.17.1",
     "helmet": "^3.20.0",
+    "http-status": "^1.3.2",
     "lodash": "^4.17.15",
     "method-override": "^3.0.0",
     "mongodb": "^3.3.0-beta2",
