--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "homepage": "https://github.com/hagopj13/task-manager-nodejs#readme",
   "dependencies": {
-    "@hapi/joi": "^15.1.0",
+    "@hapi/joi": "^15.1.1",
     "app-root-path": "^2.2.1",
     "bcryptjs": "^2.4.3",
     "boom": "^7.3.0",
@@ -42,7 +42,7 @@
     "http-status": "^1.3.2",
     "lodash": "^4.17.15",
     "method-override": "^3.0.0",
-    "mongodb": "^3.3.0-beta2",
+    "mongodb": "^3.3.0",
     "mongoose": "^5.6.9",
     "morgan": "^1.9.1",
     "pm2": "^3.5.1",
