--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.6.9",
     "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "pm2": "^3.5.1",
     "prettier": "^1.18.2",
     "validator": "^11.1.0",
