feat(auth): add env variables

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
 PORT=3000
 MONDODB_URL=mongodb://127.0.0.1:27017/task-manager-api-2
 MONDODB_TEST_URL=mongodb://127.0.0.1:27017/task-manager-api-2-test
+JWT_SECRET=thisisasamplesecret
+JWT_ACCESS_EXPIRATION_MINUTES=30
+JWT_REFRESH_EXPIRATION_DAYS=30
 CODACY_PROJECT_TOKEN=<insert token here>
