--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "express": "^4.17.1",
     "helmet": "^3.20.0",
     "http-status": "^1.3.2",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "method-override": "^3.0.0",
+    "moment": "^2.24.0",
     "mongoose": "^5.6.9",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
