use nodemon to run mocha tests

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start": "cross-env NODE_ENV=production pm2 start ecosystem.config.js --no-daemon",
     "dev": "cross-env NODE_ENV=development nodemon src/index.js",
     "test": "cross-env NODE_ENV=test mocha src/tests --recursive --exit",
-    "test:unit": "cross-env NODE_ENV=test mocha src/tests/unit --recursive --watch",
-    "test:integration": "cross-env NODE_ENV=test mocha src/tests/integration --recursive --watch",
-    "test:watch": "cross-env NODE_ENV=test mocha src/tests --recursive --watch",
+    "test:unit": "cross-env NODE_ENV=test nodemon --exec \"mocha src/tests/unit --recursive\"",
+    "test:integration": "cross-env NODE_ENV=test nodemon --exec \"mocha src/tests/integration --recursive\"",
+    "test:watch": "cross-env NODE_ENV=test nodemon --exec \"mocha src/tests --recursive\"",
     "test:coverage": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha src/tests --recursive --exit ",
     "report": "cross-env NODE_ENV=test nyc --reporter=lcovonly mocha src/tests --recursive --exit && cat ./coverage/lcov.info | env-cmd codacy-coverage && rm -rf ./coverage",
     "lint": "eslint .",
