--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production pm2 start ecosystem.config.js --no-daemon",
     "dev": "cross-env NODE_ENV=development nodemon src/index.js",
-    "test": "cross-env NODE_ENV=test mocha src/tests --recursive --exit",
-    "test:unit": "cross-env NODE_ENV=test nodemon --exec \"mocha src/tests/unit --recursive\"",
-    "test:integration": "cross-env NODE_ENV=test nodemon --exec \"mocha src/tests/integration --recursive\"",
-    "test:watch": "cross-env NODE_ENV=test nodemon --exec \"mocha src/tests --recursive\"",
-    "test:coverage": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha src/tests --recursive --exit ",
-    "report": "cross-env NODE_ENV=test nyc --reporter=lcovonly mocha src/tests --recursive --exit && cat ./coverage/lcov.info | env-cmd codacy-coverage && rm -rf ./coverage",
+    "test": "cross-env NODE_ENV=test mocha tests --recursive --exit",
+    "test:unit": "cross-env NODE_ENV=test nodemon --exec \"mocha tests/unit --recursive\"",
+    "test:integration": "cross-env NODE_ENV=test nodemon --exec \"mocha tests/integration --recursive\"",
+    "test:watch": "cross-env NODE_ENV=test nodemon --exec \"mocha tests --recursive\"",
+    "test:coverage": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha tests --recursive --exit ",
+    "report": "cross-env NODE_ENV=test nyc --reporter=lcovonly mocha tests --recursive --exit && cat ./coverage/lcov.info | env-cmd codacy-coverage && rm -rf ./coverage",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --check src/**/*.js",
