--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,8 @@
     "no-return-assign": ["error", "except-parens"],
     "no-underscore-dangle": "off",
     "no-use-before-define": ["error", { "variables": false }],
+    "no-await-in-loop": "off",
+    "no-restricted-syntax": "off",
     "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
     "promise/no-callback-in-promise": "off",
     "promise/no-promise-in-callback": "off",
