--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production pm2 start ecosystem.config.js --no-daemon",
     "dev": "cross-env NODE_ENV=development nodemon src/index.js",
+    "debug": "cross-env NODE_ENV=development ndb src/index.js",
     "test": "cross-env NODE_ENV=test mocha tests --recursive --exit",
-    "test:unit": "cross-env NODE_ENV=test nodemon --exec \"mocha tests/unit --recursive\"",
-    "test:integration": "cross-env NODE_ENV=test nodemon --exec \"mocha tests/integration --recursive\"",
     "test:watch": "cross-env NODE_ENV=test nodemon --exec \"mocha tests --recursive\"",
     "test:coverage": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha tests --recursive --exit ",
     "report": "cross-env NODE_ENV=test nyc --reporter=lcovonly mocha tests --recursive --exit && cat ./coverage/lcov.info | env-cmd codacy-coverage && rm -rf ./coverage",
@@ -67,6 +66,7 @@
     "husky": "^3.0.5",
     "lint-staged": "^9.2.5",
     "mocha": "^6.2.0",
+    "ndb": "^1.1.5",
     "node-mocks-http": "^1.7.6",
     "nodemon": "^1.19.2",
     "nyc": "^14.1.1",
