--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production pm2 start ecosystem.config.js --no-daemon",
     "dev": "cross-env NODE_ENV=development nodemon src/index.js",
-    "debug": "cross-env NODE_ENV=development ndb src/index.js",
     "test": "cross-env NODE_ENV=test mocha tests --recursive --exit",
     "test:watch": "cross-env NODE_ENV=test nodemon --exec \"mocha tests --recursive\"",
     "test:coverage": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha tests --recursive --exit ",
@@ -30,7 +29,6 @@
   "dependencies": {
     "@hapi/joi": "^15.1.1",
     "bcryptjs": "^2.4.3",
-    "boom": "^7.3.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "cross-env": "^5.2.1",
@@ -52,6 +50,7 @@
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "ajv": "^5.0.0",
     "axiosist": "^0.6.2",
     "chai": "^4.2.0",
     "codacy-coverage": "^3.4.0",
@@ -66,7 +65,6 @@
     "husky": "^3.0.5",
     "lint-staged": "^9.2.5",
     "mocha": "^6.2.0",
-    "ndb": "^1.1.5",
     "node-mocks-http": "^1.7.6",
     "nodemon": "^1.19.2",
     "nyc": "^14.1.1",
