--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-security": "^1.4.0",
     "husky": "^3.0.5",
     "lint-staged": "^9.2.5",
     "mocha": "^6.2.0",
