--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cross-env": "^5.2.1",
     "dotenv-safe": "^8.1.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.0.0",
     "helmet": "^3.21.0",
     "http-status": "^1.3.2",
     "jsonwebtoken": "^8.5.1",
