--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "cross-env": "^5.2.1",
     "dotenv-safe": "^8.1.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^1.3.2",
     "express-rate-limit": "^5.0.0",
     "helmet": "^3.21.0",
+    "hpp": "^0.2.2",
     "http-status": "^1.3.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
@@ -48,7 +50,8 @@
     "pm2": "^3.5.1",
     "prettier": "^1.18.2",
     "validator": "^11.1.0",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "ajv": "^5.5.2",
