--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "cross-env": "^6.0.0",
-    "dotenv-safe": "^8.1.0",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^1.3.2",
     "express-rate-limit": "^5.0.0",
