--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "lint:fix": "eslint . --fix",
     "format": "prettier --check **/*.js",
     "format:fix": "prettier --write **/*.js",
-    "docker:prod": "docker-compose -f docker-compose.prod.yml up",
-    "docker:dev": "docker-compose -f docker-compose.dev.yml up"
+    "docker:prod": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml up",
+    "docker:dev": "docker-compose -f docker-compose.yml -f docker-compose.dev.yml up"
   },
   "repository": {
     "type": "git",
