--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "format": "prettier --check **/*.js",
     "format:fix": "prettier --write **/*.js",
     "docker:prod": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml up",
-    "docker:dev": "docker-compose -f docker-compose.yml -f docker-compose.dev.yml up"
+    "docker:dev": "docker-compose -f docker-compose.yml -f docker-compose.dev.yml up",
+    "docker:test": "docker-compose -f docker-compose.yml -f docker-compose.test.yml up"
   },
   "repository": {
     "type": "git",
@@ -74,7 +75,7 @@
     "eslint-plugin-security": "^1.4.0",
     "husky": "^3.0.7",
     "lint-staged": "^9.4.0",
-    "mocha": "^6.2.0",
+    "mocha": "^6.2.1",
     "node-mocks-http": "^1.8.0",
     "nodemon": "^1.19.3",
     "nyc": "^14.1.1",
