--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     depends_on:
       - mongodb
     volumes:
-      - .:/api
+      - .:/usr/src/api
     networks:
       - node-network
 
