--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -3,5 +3,5 @@ services:
   nodejs:
     container_name: api-test
     environment:
-      - MONDODB_TEST_URL=mongodb://mongodb:27017/task-manager-api-test-2
+      - MONDODB_URL=mongodb://mongodb:27017/task-manager-api-test-2
     command: yarn test
