--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,5 +3,5 @@ services:
   nodejs:
     container_name: api-dev
     environment:
-      - MONDODB_URL=mongodb://mongodb:27017/task-manager-api-2
+      - ENFORCED_MONDODB_URL=mongodb://mongodb:27017/task-manager-api-2
     command: yarn dev -L
