deploy using codeship
closes #18

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ JWT_SECRET=thisisasamplesecret
 JWT_ACCESS_EXPIRATION_MINUTES=30
 JWT_REFRESH_EXPIRATION_DAYS=30
 CODACY_PROJECT_TOKEN=<insert token here>
+HEROKU_API_KEY=<insert api key here>
