--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -7,3 +7,7 @@
     - name: tests
       service: api_codeship
       command: yarn test
+- name: deploy_step
+  tag: master
+  service: codeship_heroku_deployment
+  command: codeship_heroku deploy /deploy task-manager-api-hj
