--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -11,3 +11,7 @@
   tag: master
   service: codeship-heroku-deployment
   command: codeship_heroku deploy /deploy task-manager-api-hj
+- name: code_quality_step
+  tag: master
+  service: api-codeship
+  command: yarn report
