--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "test": "cross-env NODE_ENV=test mocha tests --recursive --exit",
     "test:watch": "cross-env NODE_ENV=test nodemon --exec \"mocha tests --recursive\"",
     "test:coverage": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha tests --recursive --exit ",
-    "report": "cross-env NODE_ENV=test nyc --reporter=lcovonly mocha tests --recursive --exit && cat ./coverage/lcov.info | codacy-coverage && rm -rf ./coverage",
+    "report": "cross-env NODE_ENV=test nyc --reporter=lcovonly mocha tests --recursive --exit && cat ./coverage/lcov.info | env-cmd codacy-coverage && rm -rf ./coverage",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --check **/*.js",
     "format:fix": "prettier --write **/*.js",
     "docker:prod": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml up",
     "docker:dev": "docker-compose -f docker-compose.yml -f docker-compose.dev.yml up",
-    "docker:test": "docker-compose -f docker-compose.yml -f docker-compose.test.yml up"
+    "docker:test": "docker-compose -f docker-compose.yml -f docker-compose.test.yml up",
+    "codeship:report": "cross-env NODE_ENV=test nyc --reporter=lcovonly mocha tests --recursive --exit && cat ./coverage/lcov.info | codacy-coverage && rm -rf ./coverage"
   },
   "repository": {
     "type": "git",
