add email options to env and config

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,9 @@ MONDODB_TEST_URL=mongodb://127.0.0.1:27017/task-manager-api-2-test
 JWT_SECRET=thisisasamplesecret
 JWT_ACCESS_EXPIRATION_MINUTES=30
 JWT_REFRESH_EXPIRATION_DAYS=30
-CODACY_PROJECT_TOKEN=<insert token here>
-HEROKU_API_KEY=<insert api key here>
+CODACY_PROJECT_TOKEN
+HEROKU_API_KEY
+EMAIL_USERNAME
+EMAIL_PASSWORD
+EMAIL_HOST
+EMAIL_PORT
