--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,5 @@ JWT_ACCESS_EXPIRATION_MINUTES=30
 JWT_REFRESH_EXPIRATION_DAYS=30
 CODACY_PROJECT_TOKEN
 HEROKU_API_KEY
-EMAIL_USERNAME
-EMAIL_PASSWORD
-EMAIL_HOST
-EMAIL_PORT
+SENDGRID_API_KEY
+FROM_EMAIL
