--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "report": "cross-env NODE_ENV=test nyc --reporter=lcovonly mocha tests --recursive --exit && cat ./coverage/lcov.info | env-cmd codacy-coverage && rm -rf ./coverage",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "format": "prettier --check **/*.js",
-    "format:fix": "prettier --write **/*.js",
+    "prettier": "prettier --check **/*.js",
+    "prettier:fix": "prettier --write **/*.js",
     "docker:prod": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml up",
     "docker:dev": "docker-compose -f docker-compose.yml -f docker-compose.dev.yml up",
     "docker:test": "docker-compose -f docker-compose.yml -f docker-compose.test.yml up",
